--- a/zion/templates/base.html
+++ b/zion/templates/base.html
@@ -15,8 +15,9 @@
     <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}site-logo-57.png">
     <link rel="shortcut icon" href="{{ STATIC_URL }}shortcut-icon.png">
     <script src="{{ STATIC_URL }}cranefly/js/jquery-1.7.2.min.js"></script>
+    <script src="{{ STATIC_URL }}cranefly/js/thumbup.js"></script>
     <script src="{{ STATIC_URL }}cranefly/js/bootstrap.min.js"></script>
-
+	
 
     <style>
     	
