--- a/zion/templates/article_view.html
+++ b/zion/templates/article_view.html
@@ -39,7 +39,9 @@
           <div class="post-footer"><div class="post-rating-actions">
           	 {% if not been_thumbup %}
                <div class="post-rating">
-                 <span class="post-score post-score-upvotes"> <img src="/static/thumbup_black.png" alt="" width="25" height="25" id="thumb"></span>
+                 <span class="post-score post-score-upvotes"> 
+                 <img src="/static/thumbup_black.png" alt="" width="25" height="25" id="thumb">
+                 </span>
               </div>
               {% else %}
               <div class="post-rating">
