Change forum header category color in CSS

--- a/zion/templates/article_view.html
+++ b/zion/templates/article_view.html
@@ -90,8 +90,8 @@
    
     
     
-    <form action="/thread/misago-forums-are-now-hosted-on-digitalocean-346/watch/" class="form-inline pull-right" method="post"><input type="hidden" name="_csrf_token" value="eGrw2LKqd7PeiekF"><input type="hidden" name="retreat" value="/thread/misago-forums-are-now-hosted-on-digitalocean-346/"><button type="submit" class="btn btn-icon tooltip-top" title="Add thread to watched list"><i class="icon-bookmark"></i></button></form>
-    <form action="/thread/misago-forums-are-now-hosted-on-digitalocean-346/watch/email/" class="form-inline pull-right" method="post"><input type="hidden" name="_csrf_token" value="eGrw2LKqd7PeiekF"><input type="hidden" name="retreat" value="/thread/misago-forums-are-now-hosted-on-digitalocean-346/"><button type="submit" class="btn btn-icon tooltip-top" title="Add thread to watched list and e-mail me if anyone replies"><i class="icon-envelope"></i></button></form>
+    <form action="" class="form-inline pull-right" method="get"><input type="hidden" ><input type="hidden" name="retreat"><button type="submit" class="btn btn-icon tooltip-top" ><i class="icon-bookmark"></i></button></form>
+    <form action="" class="form-inline pull-right" method="get"><input type="hidden" ><input type="hidden" name="retreat"><button type="submit" class="btn btn-icon tooltip-top"><i class="icon-envelope"></i></button></form>
     
   </div>
 
