Implement page for tag displaying

--- a/zion/templates/article_list.html
+++ b/zion/templates/article_list.html
@@ -58,7 +58,7 @@
             <li class="thread-replies tooltip-top" title="Replies">
               {{ article.comments }}
             </li>
-            <li class="thread-last-reply tooltip-top" title="Last post {{ article.post_date }}">
+            <li class="thread-last-reply tooltip-top" title="Last post on {{ article.post_date }}">
               <a href="/thread/please-remove-image-pop-up-325/last/">{{ article.post_date }}</a>
             </li>
             <li class="thread-author tooltip-top" title="Last comment by {{ article.last_commentator.username }}">
