--- a/zion/templates/base.html
+++ b/zion/templates/base.html
@@ -59,7 +59,7 @@
                   </div>
                   <div class="control">
                     <label class="checkbox">
-                      <input name="search_thread_titles" type="checkbox"> Search only in threads titles
+                      <input name="search_thread_titles" type="checkbox"> Search only in titles
                     </label>
                   </div>
                 </div>
