--- a/zion/templates/index.html
+++ b/zion/templates/index.html
@@ -109,7 +109,7 @@
             <h3 class="forum-title"><a href="/forum/{{ forum.id }}/">{{ forum.name }}</a></h3>
             <div class="forum-details">
               <div class="thread-name">
-                <a href="/thread/how-to-misago-on-localhost-in-5-minutes-updated-19/new/" class="tooltip-top" title="">How to: Misago on localhost...</a>
+                <a href="/thread/how-to-misago-on-localhost-in-5-minutes-updated-19/new/" class="tooltip-top" title="">{{ forum.description }}</a>
               </div>
               <div class="muted"><a href="/users/{{ forum.last_author.id }}/" class="last-poster">{{ forum.last_author.username }}</a> - {{ forum.last_postdate }}</div>
             </div>
@@ -169,7 +169,7 @@
             <h3 class="forum-title"><a href="/forum/{{ forum.id }}/">{{ forum.name }}</a></h3>
             <div class="forum-details">
               <div class="thread-name">
-                <a href="/thread/how-to-misago-on-localhost-in-5-minutes-updated-19/new/" class="tooltip-top" title="">How to: Misago on localhost...</a>
+                <a href="/thread/how-to-misago-on-localhost-in-5-minutes-updated-19/new/" class="tooltip-top" title="">{{ forum.description }}</a>
               </div>
               <div class="muted"><a href="/users/{{ forum.last_author.id }}/" class="last-poster">{{ forum.last_author.username }}</a> - {{ forum.last_postdate }}</div>
             </div>
